--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -20,6 +20,7 @@
   
   body{
     background-image: url('/images/background.png');
+    font-size: 18px;
   }
   
   button{
@@ -31,7 +32,18 @@
   
   a{
     text-decoration: none;
+    color: black;
     cursor: pointer;
+  }
+
+  select:required:invalid {
+    color: #666;
+  }
+  option[value=""][disabled] {
+    display: none;
+  }
+  option {
+    color: #000;
   }
   
   .container{
@@ -160,12 +172,7 @@
   }
 
   .btn {
-    min-width: 50px;
-    max-width: 120px;
-    height: 25px;
-    padding: 5px;
     background-color: #B7C8CC;
-    margin: 5px;
     border-radius: 5px;
     cursor: pointer;
   }
@@ -182,6 +189,139 @@
       opacity: 1;
   }
 
+  .catalog {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .product {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 250px;
+    height: 250px;
+    margin: 10px;
+    overflow: hidden;
+  }
+
+  .product__btns {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    left: 0;
+    padding: 5px;
+    z-index: 9;
+  }
+  
+  .product__image {
+    opacity: 1;
+    height: 100%;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    object-fit: cover;
+  }
+
+  .product__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(176, 176, 176, 0.7);
+    padding: 5px;
+    color: white;
+  }
+  
+  .middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .product:hover .image {
+    opacity: 0.3;
+  }
+  
+  .product:hover .middle {
+    opacity: 1;
+  }
+  
+  .product__name {
+  }
+
+  .catalog {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .control {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 5px;
+  }
+
+  .control__btn {
+    padding: 5px;
+  }
+
+  .content {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .show__content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 320px;
+    margin: 0 auto;
+  }
+
+  .product__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .image__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 5px;
+  }
+
+  .image__wrapper img{
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .input {
+    width: 100%;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .description {
+    height: 100px;
+  }
+
   .slider__form-wrapp {
     display: flex;
     justify-content: center;
@@ -194,9 +334,13 @@
     justify-content: center;
     align-items: center;
     width: 200px;
+    height: 200px;
     margin: 5px;
     padding: 5px;
     background-color: gray;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
   
   .slider-image__wrapper {
@@ -215,11 +359,7 @@
     width: 100%;
   }
 
-  .slider__delete {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 5px;
+  .product__delete {
     padding: 5px;
     border-radius: 5px;
     border: white 2px solid;
@@ -228,14 +368,32 @@
     color: white;
     background-color: rgba(255, 0, 0, 0.7);
     cursor: pointer;
-    z-index: 9;
   }
 
-  .slider__delete:hover {
+  .product__edit {
+    padding: 5px;
+    border-radius: 5px;
+    border: white 2px solid;
+    font-size: 14px;
+    line-height: 14px;
+    color: white;
+    background-color: rgba(0, 0, 255, 0.7);
+    cursor: pointer;
+  }
+
+  .product__edit:hover {
+    background-color: rgb(0, 0, 255);
+  }
+
+  .product__edit:active {
+    background-color: rgba(0, 0, 255, 0.4);
+  }
+
+  .product__delete:hover {
     background-color: rgb(255, 0, 0);
   }
 
-  .slider__delete:active {
+  .product__delete:active {
     background-color: rgba(255, 0, 0, 0.4);
   }
   
