--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -359,7 +359,7 @@
     width: 100%;
   }
 
-  .product__delete {
+  .delete {
     padding: 5px;
     border-radius: 5px;
     border: white 2px solid;
@@ -370,7 +370,7 @@
     cursor: pointer;
   }
 
-  .product__edit {
+  .edit {
     padding: 5px;
     border-radius: 5px;
     border: white 2px solid;
@@ -381,22 +381,33 @@
     cursor: pointer;
   }
 
-  .product__edit:hover {
+  .edit:hover {
     background-color: rgb(0, 0, 255);
   }
 
-  .product__edit:active {
+  .edit:active {
     background-color: rgba(0, 0, 255, 0.4);
   }
 
-  .product__delete:hover {
+  .delete:hover {
     background-color: rgb(255, 0, 0);
   }
 
-  .product__delete:active {
+  .delete:active {
     background-color: rgba(255, 0, 0, 0.4);
   }
+
+  .slider-btn {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 5px;
+  }
   
+  .login-btn {
+    padding: 5px;
+  }
+
   .footer{
       width: 100%;
       display: flex;
